[workspace]

members = [
    "commons",
    "governance",
    "protocol",
    "message",
    "network",
    "ledger",
    "core",
]

[workspace.dependencies]
# Post version 1
tokio = "~1.20"
serde = { version = "~1.0" }
serde_json = "~1.0"
rmp-serde = "~1"
thiserror = "~1.0"
utoipa = "~2"                                            # For eficient errors creation
dashmap = "~5.4.0"
async-std = "~1.12.0"
blake3 = "~1.0"
x25519-dalek = { version = "~1.1.0" }
curve25519-dalek = { version = "~3.0.0" }
bincode = "~1.0"                                         #Serializador necesario por serde para implementar la serialización y deserialización
ed25519-dalek = { version = "^1", features = ["serde"] }
url = "~2.3.1"
# Pre version 1
tokio-stream = "~0.1"
serde_cbor = "~0.11.2"
async-trait = "~0.1.56"                         # Rust's own suggested alternative for implementing traits with asynchronous methods
getrandom = "~0.2"
borsh = "~0.9.3"
config = { version = "~0.13.2" }
json-patch = "~0.2"
rand = { version = "~0.8.5" }
rand_core = "~0.5"
instant = "~0.1.11"
unsigned-varint = "~0.7"
base64 = "~0.13"
time = { version = "^0.3", features = ["std"] }
libsecp256k1 = { version = "~0.7" }
# remove after bbs version is updated with latest blake2 and generic-array >= 14
blake2 = { version = "~0.9" }
sha2 = { version = "~0.10" }
sha3 = { version = "~0.10" }

futures = "~0.3.24"
env_logger = "^0.10"
log = "~0.4"
hex = "~0.4.3"
leveldb = "~0.8"
db-key = "^0.0.5" #Usar esta versión. Necesario para implementar custom keys para leveldb::Database // Eso puso Javier
jsonschema = "~0.16"
tempfile = "^3.4"
tempdir = "~0.3"
libp2p = { version = "~0.49", features = [] }

[profile.release]
lto = true
codegen-units = 1
debug = false
debug-assertions = false
panic = "abort"

[profile.test]
debug = true

[profile.dev]
debug = true

[profile.doc]
debug-assertions = false
