[workspace]

members = [
    "core"
]

[workspace.package]
version = "0.2.0-dev"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE Protocol reference implementation"
# Remove when crates.io is published
documentation = "https://www.taple.es"
readme = "../README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-core"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

[workspace.dependencies]
# Dependencias de el paquete json (serde-json)
serde = { version = "^1.0.100", default-features = false }
serde_json = { version = "^1.0.97" }
itoa = "^1.0"
ryu = "^1.0"
# Post version 1
tokio = { version = "^1.20", features = ["default", "time", "rt", "rt-multi-thread", "sync", "macros", "signal"] }
rmp-serde = "~1"
thiserror = "^1.0"
blake3 = "~1.0"
bincode = "~1.3"       # solo test                                  #Serializador necesario por serde para implementar la serialización y deserialización
ed25519-dalek = { version = "^1", features = ["serde"] }
url = "^2.3.1"
# Pre version 1
tokio-stream = "~0.1"
serde_cbor = "~0.11.2"
async-trait = "^0.1.56"                         # Rust's own suggested alternative for implementing traits with asynchronous methods
getrandom = "~0.2"
borsh = "^0.10.3"
async-std = "~1.12.0"
config = { version = "^0.13.2" }
json-patch = "^1"
jsonschema = "~0.17"
rand = { version = "~0.8.5" }
rand_core = "~0.5"
instant = "~0.1.11"
unsigned-varint = "~0.7"
base64 = "~0.13"
time = { version = "^0.3", features = ["std"] }
libsecp256k1 = { version = "~0.7" }
# remove after bbs version is updated with latest blake2 and generic-array >= 14
blake2 = { version = "~0.9" }
sha2 = { version = "~0.10" }
sha3 = { version = "~0.10" }

futures = "^0.3.24"
env_logger = "^0.10"
log = "^0.4"
hex = "^0.4.3"
db-key = "^0.0.5" #Usar esta versión. Necesario para implementar custom keys para leveldb::Database // Eso puso Javier
libp2p = { version = "^0.45.1", features = [
    "request-response",
    "secp256k1",
], default-features = false }

## Evaluator
wasmtime = { version = "^9.0.4", features = ["cache"] }
wasm-gc-api = { version = "~0.1.11" }

[profile.release]
lto = true
codegen-units = 1
debug = false
debug-assertions = false
panic = "abort"

[profile.test]
debug = true

[profile.dev]
debug = true

[profile.doc]
debug-assertions = false
