[workspace]

members = ["core"]

[workspace.package]
version = "0.4.0-dev"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE Protocol reference implementation"
readme = "README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-core"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]
rust-version = "1.67"

[workspace.dependencies]
serde = "1.0.100"
serde_json = "1.0.97"
tokio = "1.20"
tokio-util = "0.7"
tokio-stream = "0.1"
rmp-serde = "1"
thiserror = "1"
blake3 = "1"
ed25519-dalek = "1"
async-trait = "0.1.56"
getrandom = "0.2"
borsh = "0.10.3"
async-std = "1.12"
config = "0.13.2"
json-patch = "1"
jsonschema = { version = "0.17", default_features = false }
rand = "0.8.5"
base64 = "0.13"
blake2 = "0.10"
instant = "0.1.11"
unsigned-varint = "0.7"
time = "0.3"
libsecp256k1 = "0.7"
sha2 = "0.10"
sha3 = "0.10"
futures = "0.3.24"
log = "0.4"
hex = "0.4.3"
libp2p = { version = "0.45.1", default_features = false }
wasmtime = "9.0.4"
serial_test = "1"
# TODO: Pendiente la version de LibP2P es la 0.21.2 pero si probamamos con * o con ^0 coge la 0.23.1
# trust-dns-resolver = "^0"
trust-dns-resolver = "0.21.2"

[profile.release]
lto = true
codegen-units = 1
debug = false
debug-assertions = false
panic = "abort"

[profile.test]
debug = true

[profile.dev]
debug = true

[profile.doc]
debug-assertions = false
