[package]
name = "commons"
version = "0.1.1"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE Protocol reference implementation"
# Remove when crates.io is published
documentation = "https://www.taple.es" 
readme = "../README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-core"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "commons"
path = "src/lib.rs"
bench = false

[features]
default = ["secp256k1", "bls12381", "x25519", "sha2", "sha3", "blake2"]
secp256k1 = ["libsecp256k1"]
bls12381 = ["bbs", "pairing-plus", "hkdf", "generic-array"]
x25519 = ["x25519-dalek", "curve25519-dalek"]

[dependencies]
serde = { version = "1.0"}
serde_json = "1.0"
serde_cbor = "0.11.2"
rmp-serde = "1"
thiserror = "1.0" # For eficient errors creation
async-trait = "0.1.56" # Rust's own suggested alternative for implementing traits with asynchronous methods
tokio = { version = "1", features = [
    "sync","rt","rt-multi-thread","time"] } 
getrandom = "0.2"
borsh = "0.9.3"
config = { version = "0.13.2" }
utoipa = "2"
json-patch = "0.2"
rand = {version = "^0.7"}
rand_core = "^0.5"

base64 = "0.13"
ed25519-dalek = { version = "1", features = ["serde"] }
libsecp256k1 = { version = "0.7", optional = true }
x25519-dalek = { version = "1.1.0", optional = true }
curve25519-dalek = { version = "3.0.0", optional = true }
bbs = { version = "0.4.1", default-features = false, optional = true }
pairing-plus = { version = "0.19", optional = true }
hkdf = { version = "0.12", optional = true }
# remove after bbs version is updated with latest blake2 and generic-array >= 14
generic-array = { version = "0.12.4", optional = true }
blake2 = { version = "0.9", optional = true }
blake3 = "1.0"
sha2 = { version = "0.10", optional = true }
sha3 = { version = "0.10", optional = true }
chrono={ version = "0.4", features = ["clock"]}

# oc_schema = {path = "../oc_schema"}
# libsds = {path = "../libsds"}

#LevelDB
leveldb = "0.8"
db-key = "0.0.5" #Usar esta versión. Necesario para implementar custom keys para leveldb::Database
bincode = "1.0" #Serializador necesario por serde para implementar la serialización y deserialización
jsonschema = "0.16"
url = "2.3.1"
#merge = {version =  "0.1.0", features = ["derive", "num", "std"]} #Necesario para implementar patron Merge. Util para mergear Settings por defecto frente a las introducidas por usuario.
[dev-dependencies]
tempdir = "0.3"