[package]
name = "contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
json-patch = "~0.2"
bincode = "1.3.3"
thiserror = "~1.0"

[lib]
crate-type = ["cdylib", "rlib"]
