[package]
name = "taple-core"
version = "0.2.0-dev"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
readme = "../README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-core"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]
rust-version = "1.67"

[features]
default = ["secp256k1"]
all = ["default", "evaluation", "approval", "validation"]
evaluation = ["dep:wasmtime", "dep:async-std"]
approval = []
validation = []
secp256k1 = ["dep:libsecp256k1"]

[dependencies]
tokio = { version = "1.20", features = ["time", "sync", "macros"] }
libp2p = { version = "0.45.1", default_features = false, features = [
	"identify",
	"kad",
	"dns-tokio",
	"tcp-tokio",
	"mplex",
	"noise",
	"yamux",
] }
config = { version = "~0.13.2", features = ["toml"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0" }
async-trait = { version = "~0.1.56" }
futures = { version = "~0.3.24" }
env_logger = { version = "^0.10" }
log = { version = "~0.4" }
hex = { version = "~0.4.3" }
jsonschema = { version = "~0.16" }
time = { version = "^0.3", features = ["std"] }
thiserror = { version = "~1.0" }
tokio-stream = { version = "~0.1" }
rmp-serde = { version = "~1" }
borsh = { version = "~0.10.3" }
blake3 = { version = "~1.0" }
rand = { version = "~0.8.5", features = ["small_rng"] }
instant = { version = "~0.1.11" }
unsigned-varint = { version = "~0.7", features = ["futures"] }
base64 = { version = "0.13" }
async-std = { version = "~1.12.0", features = ["attributes"], optional = true }
bincode = { version = "~1.3" }
json-patch = { version = "~0.2" }
ed25519-dalek = { version = "^1", features = ["serde"] }
libsecp256k1 = { version = "~0.7", optional = true }
blake2 = { version = "~0.9" }
sha2 = { version = "~0.10" }
sha3 = { version = "~0.10" }
getrandom = { version = "0.2" }
wasmtime = { version = "^5.0.0", features = ["cache"], optional = true }

[dev-dependencies]
taple-core = { path = ".", features = ["all"] }
# serial_test = { workspace = true }