[package]
name = "taple-core"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[features]
default = ["secp256k1"]
all = ["default", "evaluation", "approval", "validation"]
evaluation = ["dep:wasmtime", "dep:async-std"]
approval = []
validation = []
secp256k1 = ["dep:libsecp256k1"]

[dependencies]
tokio = { workspace = true, features = ["time", "sync", "macros"] }
libp2p = { workspace = true, default_features = false, features = [
	"identify",
	"kad",
	"dns-tokio",
	"tcp-tokio",
	"mplex",
	"noise",
	"yamux",
] }
config = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
async-std = { workspace = true, optional = true }
jsonschema = { workspace = true }
time = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = {workspace = true }
rmp-serde = { workspace = true }
borsh = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
instant = { workspace = true }
unsigned-varint = { workspace = true, features = ["futures"] }
base64 = { workspace = true }
getrandom = { workspace = true }
json-patch = { workspace = true }
ed25519-dalek = { workspace = true, features = ["serde"] }
libsecp256k1 = { workspace = true, optional = true }
blake2 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
wasmtime = { workspace = true, features = ["cache"], optional = true }

[dev-dependencies]
taple-core = { path = ".", features = ["all"] }
serial_test = { workspace = true }