[package]
name = "governance"
version = "0.1.1"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE Protocol reference implementation"
# Remove when crates.io is published
documentation = "https://www.taple.es" 
readme = "../README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-core"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "governance"
path = "src/lib.rs"
bench = false


[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true, features = ["sync", "rt", "time"] }
thiserror = "1.0"
rand = { version = "0.8",  features = ["small_rng"] } #Elimina en futuro. Usandose para crypto_utils en governance.rs:19:35
jsonschema = "0.16"
serde_json = "1.0"
log = "0.4"
async-trait = "0.1.58"
commons = { path = "../commons" }
