[package]
name = "json-patch"
version = "1.0.0"
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
categories = []
keywords = ["json", "json-patch"]
description = "RFC 6902, JavaScript Object Notation (JSON) Patch"
repository = "https://github.com/idubrov/json-patch"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2021"

[features]
default = ["diff"]
diff = ["treediff"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { path = "../json" }
thiserror = { workspace = true }
treediff = { path = "../treediff-rs", optional = true}
utoipa = { version = "3.3.0", optional = true }

[dev-dependencies]
expectorate = "1.0"
rand = "0.8.5"
serde_json = { path = "../json" } # Tenía la feature de preserve order que desactivé en el otro
serde_yaml = "0.9.19"
utoipa = { version = "3.3.0", features = ["debug"] }
