[package]
name = "ledger"
version = "0.1.1"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE Protocol reference implementation"
# Remove when crates.io is published
documentation = "https://www.taple.es" 
readme = "../README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-core"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["sync", "rt", "time"] }
async-trait = "0.1.56"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
serde_json = "1.0"
log = "0.4"
jsonschema = "0.16"
chrono={ version = "0.4", features = ["clock"]}

commons = { path = "../commons" }
governance = { path = "../governance" }

[dev-dependencies]
leveldb = "0.8"
tempdir = "0.3"
