[package]
name = "ledger"
version = "0.1.1"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE Protocol reference implementation"
# Remove when crates.io is published
documentation = "https://www.taple.es" 
readme = "../README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-core"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["sync", "rt", "time"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
base64 = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
jsonschema = { workspace = true }
chrono = { workspace = true, features = ["clock"] }

commons = { path = "../commons" }
governance = { path = "../governance" }

[dev-dependencies]
leveldb = "^0.8"
tempdir = "^0.3"
