[package]
name = "message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["default", "time", "rt", "rt-multi-thread", "sync", "macros"] }
tokio-stream = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.2"
rmp-serde = "1"
futures = "0.3.21"
rand = "0.8.5"
thiserror = "1.0"
dashmap = "5.4.0"

commons = { path = "../commons" }