[package]
name = "message"
version = "0.1.1"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE Protocol reference implementation"
# Remove when crates.io is published
documentation = "https://www.taple.es" 
readme = "../README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-core"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["default", "time", "rt", "rt-multi-thread", "sync", "macros"] }
tokio-stream = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.2"
rmp-serde = "1"
futures = "0.3.21"
rand = "0.8.5"
thiserror = "1.0"
dashmap = "5.4.0"

commons = { path = "../commons" }