[package]
name = "message"
version = "0.1.1"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE Protocol reference implementation"
# Remove when crates.io is published
documentation = "https://www.taple.es" 
readme = "../README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-core"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = [
    "default",
    "time",
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
] }
tokio-stream = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
rmp-serde = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }

commons = { path = "../commons" }