[package]
name = "network"
version = "0.1.1"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE Protocol reference implementation"
# Remove when crates.io is published
documentation = "https://www.taple.es" 
readme = "../README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-core"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
instant = { workspace = true }
futures = { workspace = true }
unsigned-varint = { workspace = true }
tokio-stream = { workspace = true }
clap = { workspace = true, features = ["derive"] }
async-std = { workspace = true, features = ["attributes"] }
bincode = { workspace = true }

ledger = { path = "../ledger" }
message = { path = "../message" }
protocol = { path = "../protocol" }
commons = { path = "../commons" }
governance = { path = "../governance" }

[dependencies.libp2p]
workspace = true
features = ["identify", "kad", "mplex", "noise", "ping", "serde", "tcp-tokio"]

[dependencies.tokio]
workspace = true
features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"]

[dev-dependencies]
bs58 = "^0.4.0"
rand = "^0.8.5"
tempdir = "^0.3"