[package]
name = "network"
version = "0.1.1"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE Protocol reference implementation"
# Remove when crates.io is published
documentation = "https://www.taple.es" 
readme = "../README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-core"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
instant = { workspace = true }
futures = { workspace = true }
unsigned-varint = { workspace = true, features = ["futures"]}
tokio-stream = { workspace = true }
async-std = { workspace = true, features = ["attributes"] }
bincode = { workspace = true }

ledger = { path = "../ledger" }
message = { path = "../message" }
protocol = { path = "../protocol" }
commons = { path = "../commons" }
governance = { path = "../governance" }

[dependencies.libp2p]
workspace = true
features = ["dns", "identify", "kad", "mplex", "noise", "ping", "serde", "tcp-tokio", "yamux", "async-std"]

[dependencies.tokio]
workspace = true
features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"]

[dev-dependencies]
bs58 = "^0.4.0"
rand = "^0.8.5"
