[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.20", features = ["default", "time", "rt", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1"
rmp-serde = "1"
log = "0.4"
borsh = "0.9.3"
blake3 = "1.0"
async-trait = "0.1.56"
serde_json = "1.0"

futures = "0.3.21"
rand = {version = "0.8", features = ["small_rng"] }
thiserror = "1.0"
jsonschema = "0.16"
chrono={ version = "0.4", features = ["clock"]}

commons = { path = "../commons"}
message = { path = "../message"}

# ed25519-dalek = { version = "1"} #Eliminar en futuro. Usandose para crypto_utils en main/mod.rs:10:1

ledger = { path = "../ledger" }
governance = { path = "../governance" }
