[package]
name = "protocol"
version = "0.1.1"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE Protocol reference implementation"
# Remove when crates.io is published
documentation = "https://www.taple.es" 
readme = "../README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-core"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["default", "time", "rt", "rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1"
rmp-serde = "1"
log = "0.4"
borsh = "0.9.3"
blake3 = "1.0"
async-trait = "0.1.56"
serde_json = "1.0"

futures = "0.3.21"
rand = {version = "0.8", features = ["small_rng"] }
thiserror = "1.0"
jsonschema = "0.16"
chrono={ version = "0.4", features = ["clock"]}

commons = { path = "../commons"}
message = { path = "../message"}

# ed25519-dalek = { version = "1"} #Eliminar en futuro. Usandose para crypto_utils en main/mod.rs:10:1

ledger = { path = "../ledger" }
governance = { path = "../governance" }
