[package]
name = "protocol"
version = "0.1.1"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE Protocol reference implementation"
# Remove when crates.io is published
documentation = "https://www.taple.es" 
readme = "../README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-core"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = [
    "default",
    "time",
    "rt",
    "rt-multi-thread",
    "sync",
] }
serde = { workspace = true, features = ["derive"] }
tokio-stream = { workspace = true }
rmp-serde = { workspace = true }
log = { workspace = true }
borsh = { workspace = true }
blake3 = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }

futures = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
thiserror = { workspace = true }
jsonschema = { workspace = true }
time = { workspace = true, features = ["std"] }

commons = { path = "../commons" }
message = { path = "../message" }

# ed25519-dalek = { version = "1"} #Eliminar en futuro. Usandose para crypto_utils en main/mod.rs:10:1

ledger = { path = "../ledger" }
governance = { path = "../governance" }

