[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
description = "Find the difference between arbitrary data structures"
documentation = "https://docs.rs/treediff"
keywords = ["diff", "structure", "tree", "arbitrary", "general"]
categories = ["algorithms"]
license = "MIT/Apache-2.0"
name = "treediff"
readme = "README.md"
repository = "https://github.com/Byron/treediff-rs"
edition = "2018"
version = "4.0.2"
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[dependencies]
serde_json = { path = "../json" }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }

