[package]
name = "taple-db-leveldb"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leveldb = { workspace = true }
db-key = { workspace = true }
taple-core = { workspace = true }
tempfile = { workspace = true }
borsh = { workspace = true }
