[package]
name = "basic_usage"
version = "0.1.1"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE Protocol reference implementation"
# Remove when crates.io is published
documentation = "https://www.taple.es" 
readme = "../README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-core"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["default", "time", "rt", "rt-multi-thread", "sync", "macros"] }
serde_json = "1.0"

hex = "0.4.3"

core = { path = "../../core" }
commons = { path = "../../commons" }

[dependencies.libp2p]
version = "0.45.1"
features = [
	"identify",
	"kad",
	"mplex",
	"noise",
	"ping",
	"serde",
	"tcp-tokio",
]

[workspace]