[package]
name = "basic_usage"
version = "0.3.0"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE basic usage example"
readme = "../README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-core"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

[workspace]

[dependencies]
taple-core = { path = "../../core", features = ["validation"] }
tokio = { version = "1.20", features = [
    "default",
    "time",
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
] }
hex = "0.4.3"
