[package]
name = "taple-network-libp2p"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taple-core = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "macros"] }
libp2p = { workspace = true, default_features = false, features = [
    "identify",
    "kad",
    "dns-tokio",
    "tcp-tokio",
    "mplex",
    "noise",
    "yamux",
] }
instant = { workspace = true } # Esta no se si se puede ignorar porque solo es para el duration
log = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
unsigned-varint = { workspace = true }
thiserror = { workspace = true }
